# yaac

./: README.md  pyproject.toml  text.txt
tests/models/yad/: test_yad.py
yaac/common/: trainable_model.py
yaac/models/yad/: yad.py
